--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("images/fondo.jpg");
+	background-image: url("imagenes/fondo.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size:cover;
@@ -7,12 +7,24 @@ body{
 }
 
 
-h1{
+h3{
 	font-family: 'Finger Paint', cursive;
-	color:  #f2f2f2;
-	font-size: 60px;
+	color: #f2f2f2;
+	font-size: 58px;
 	text-shadow: 3px 3px #666666;
-	padding-top: 15px;
+}
+
+#span1{
+	padding-top: 5px;
+	padding-right: 60px;
+	display: inline-block;
+}
+
+#span2{
+	text-align: right;
+	display: inline-block;
+	color: #ffffff;
+	font-weight: bold;
 }
 
 #cont1{
@@ -24,13 +36,22 @@ h1{
     margin: auto;
 	min-width: 510px;
 	position: absolute;
+	display: block;
 }
 
 #cont2{
+	text-align: right;
+	padding: 0px;
+	border-radius: 5px;
+	display: block;
+}
+
+#cont3{
 	text-align: center;
 	background: rgba(255,255,255,0.65);
 	padding: 0px;
 	border-radius: 5px;
+	display: block;
 }
 
 .tabla{
@@ -46,7 +67,7 @@ h1{
 
 .tabdados{
 	width: 100%;
-	justify-content:center;
+	justify-content: center;
 }
 
 .th1{
@@ -59,9 +80,9 @@ h1{
 
 .th1, .th2{
 	background-color: #666666;
-	padding: 6px;
-	color: #FFFFFF;
-	font-size: 20px;
+	padding: 3px;
+	color: #ffffff;
+	font-size: 18px;
 }
 
 .etiqueta{
@@ -79,14 +100,24 @@ h1{
 	font-weight: bold;
 }
 
-.jugada, .etiqueta{
+.jugada{
 	width: 50%;
 	padding: 2px;
 }
 
-.acumulador, .puntaje{
+.etiqueta{
+	width: 50%;
+	padding: 0px;
+}
+
+.puntaje{
 	width: 40%;
 	padding: 2px;
+}
+
+.acumulador{
+	width: 40%;
+	padding: 0px;
 }
 
 .puntaje:disabled{
@@ -96,18 +127,67 @@ h1{
 #verde:hover { background-color: #3e8e41;}
 
 #verde{
-	background-color: #4CAF50;
+	background-color: #4caf50;
 }
 
 #gris{
 	background-color: #737373;
 }
 
+.jugador{
+	border-top-left-radius: 6px;
+	border-bottom-left-radius: 6px;
+	height: 30px;
+}
+
+.btnguardar{
+	border-top-right-radius: 6px;
+	border-bottom-right-radius: 6px;
+	background-color: #336699;
+	border: none;	
+	padding: 3px;
+	margin: 0px;
+	cursor: pointer;
+	height: 30px;
+	width: 30px;
+}
+
+.btnnuevo{
+	border-radius: 4px;
+	background-color: #f9c806;
+	border: none;
+	color: #ffffff;
+	font-size: 16px;
+	padding: 3px;
+	width: 60px;
+	cursor: pointer;
+	margin: 2px;
+	height: 30px;
+}
+
+.btnnuevo:hover{
+	background-color: #ffcc00;
+	font-weight: bold;
+}
+
+.btnrecords{
+	border-radius: 4px;
+	background-color: #ff6600;
+	border: none;
+	color: #ffffff;
+	font-size: 16px;
+	padding: 3px;
+	width: 65px;
+	cursor: pointer;
+	margin: 2px;
+	height: 30px;
+}
+
 .btnjugar{
 	width: 100%;
 	height:  100%;
 	padding: 2px;
-	color: #FFFFFF;
+	color: #ffffff;
 	border: none;
 	border-radius: 10px;
 	cursor: pointer;
@@ -123,7 +203,7 @@ h1{
 	cursor: not-allowed;
 }
 
-.btnlanzar {
+.btnlanzar{
 	display: inline-block;
 	border-radius: 4px;
 	background-color: #cc0000;
@@ -137,15 +217,15 @@ h1{
 	margin: 5px;
 }
 
-.btnlanzar span {
+.btnlanzar span{
 	cursor: pointer;
 	display: inline-block;
 	position: relative;
 	transition: 0.5s;
 }
 
-.btnlanzar span:after {
-	content: url("/images/lanzar.png");
+.btnlanzar span:after{
+	content: url("imagenes/lanzar.png");
 	color: white;
 	position: absolute;
 	opacity: 0;
@@ -154,38 +234,47 @@ h1{
 	transition: 0.5s;
 }
 
-.btnlanzar:enabled:hover span {
+.btnlanzar:enabled:hover span{
 	padding-right: 30px;
 }
 
-.btnlanzar:enabled:hover span:after {
+.btnlanzar:enabled:hover span:after{
 	opacity: 1;
 	right: 0;
 }
 
 .img{
-	height: 70px;
+	height: 60px;
 	width: 100px;
 }
 
-input[type="checkbox"] {
+.modal-header{
+	background-color: #ff6600;
+	color: #ffffff;
+}
+
+.table-sm{
+	text-align: center;
+}
+
+input[type="checkbox"]{
     display:none;
 }
 
-input[type="checkbox"] + label {
+input[type="checkbox"] + label{
     color:#f2f2f2;
 }
 
-input[type="checkbox"] + label span {
+input[type="checkbox"] + label span{
     display:inline-block;
     width:19px;
     height:19px;
     margin:-2px 10px 0 0;
     vertical-align:middle;
-    background:url(/images/check.png) left top no-repeat;
+    background:url(imagenes/check.png) left top no-repeat;
     cursor:pointer;
 }
 
-input[type="checkbox"]:checked + label span {
-    background:url(/images/check.png) -19px top no-repeat;
+input[type="checkbox"]:checked + label span{
+    background:url(imagenes/check.png) -19px top no-repeat;
 }
